web/resources/css/common.css
/*
Theme Name: Flat Auction
Athour: A.LK.M. Nazmul Islam
Version: 1.0
*/

@font-face {
    font-family: "tw-cen-mt";
    src: url('../fonts/TCM_____.eot');
    src: url('../fonts/TCM_____.eot?#iefix') format('embedded-opentype'),
        url('../fonts/TCM_____.svg#Tw Cen MT') format('svg'),
        url('../fonts/TCM_____.woff') format('woff'),
        url('../fonts/TCM_____.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}
body{
    font-family: "tw-cen-mt";
    background-color: #FFF;
    color: #484848;
    overflow-x: hidden;
}
h1,h2,h3,h4,h5,h6{
    font-family: "tw-cen-mt"!important;
    color: #484848;
    margin-top: 5px!important;
    margin-bottom: 5px!important;
    line-height: 150%;
}
p{
    font-family: "tw-cen-mt"!important;
    color: #484848;
    font-size: 16px;
    margin-top: 5px!important;
    margin-bottom: 5px!important;
    line-height: 150%;
}
a{
    cursor: pointer;
}
.padding-5px{
    padding: 5px;
}
.margin-bottom-5px{
    margin-bottom: 5px;
}
.margin-bottom-10px{
    margin-bottom: 10px;
}

.margin-top-50px{
    margin-top: 50px;
}
.margin-top-95px{
    margin-top: 95px!important;
}
.margin-bottom-50px{
    margin-bottom: 50px;
}
.margin-top-bottom-50px{
    margin-top: 50px;
    margin-bottom: 50px;
}
.divider{
    border-bottom: 1px solid #ccc;
}
/* ---------------------------- Header -------------------------------- */

.margin-top-bottom-10px{
    margin-top: 10px;
    margin-bottom: 10px;

}
.header-menu-layout{
    margin-bottom: 13px;
    border-top-right-radius: 28px;
    border-top-left-radius: 28px;
    border-bottom-right-radius: 28px;
    border-bottom-left-radius: 28px;
    background: #f75b1e; 
    background: -moz-linear-gradient(left, #f75b1e 0%, #f6a624 100%); 
    background: -webkit-linear-gradient(left, #f75b1e 0%,#f6a624 100%);
    background: linear-gradient(to right, #f75b1e 0%,#f6a624 100%); 
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f75b1e', endColorstr='#f6a624',GradientType=1 ); /* IE6-9 */ 
}

.header-menu-layout ul li span{
    margin-left: 5px;
    margin-right: 5px;
}
.header-menu-layout ul li a,.header-menu-layout ul li span{
    font-family: "tw-cen-mt";
    font-size: 18px;
    color: #fff!important;
    display: inline-block;
}
.social-icons{
    padding: 0;
    margin: 0;
}
.social-icons li{
    display: inline-block;
    float: right;
}
/* ---------------------------- FAQ -------------------------------- */
.custom-panel-title{
    font-weight: bold;
    color:#0070C0;
}
.faq-custom-panel-default > .panel-heading{
    background-image: none!important;
}
.faq-custom-panel {
    -webkit-box-shadow: none!important;
    box-shadow: none!important;
    border: none!important;
}
.panel-group .panel-heading + .panel-collapse > .list-group, .panel-group .panel-heading + .panel-collapse > .panel-body
/* ---------------------------- Footer -------------------------------- */
.footer-bg{
    font-family: "tw-cen-mt";
    color: #fff;
    width: 100%;
    background-color: #206baf;
    box-shadow: inset 0 1px 0 #ddd;
    text-align: center;
    font-size: 24px;
    /*    position: fixed;
        bottom: 0;*/
}
.footer-border{
    border-top: 1px solid #ccc;
    padding: 8px 2px;
}
/* --------------------- footer top section -------------------------------------  */
.landing-page-footer-top-section{
    font-family: "tw-cen-mt";
    background-color: #d6d6d6;
    color: #272727;
    padding-top: 30px;
    padding-bottom: 30px;
}
.landing-page-footer-top-section-header{
    font-size: 24px;
    text-transform: uppercase;
}
.landing-page-footer-top-section-ul{
    list-style-type: none;
    margin: 0;
    padding: 5px 25px;
}
.landing-page-footer-top-section-ul li{
    margin: 5px 0;
}
.landing-page-footer-top-section-ul li a{
    color: #272727;
    font-size: 16px;
}
.landing-page-footer-top-section-ul li a:hover{
    text-decoration: none;
}
/* --------------------- Landing Page -------------------------------------  */
.search-box-layout-bg{
    background: url("../images/bg.jpg") no-repeat scroll 0 0;
    background-size:100% 100%
}
/* --------------------- Landing Page & member Home Search Box -------------------------------------  */

.landing-page-search-box-layout > typeahead-container > ul{
    border-radius: 0!important;
}
.landing-page-search-box-layout > typeahead-container > ul > li > a{
    font-family: "tw-cen-mt";
    color: #484848;
    background-image: none!important;
    background-color: #fff!important;
    border-top: 1px solid #f16c26;
}
.landing-page-search-box-layout > typeahead-container > ul > li > a:hover,
.landing-page-search-box-layout > typeahead-container > ul > li > a:focus,
.landing-page-search-box-layout > typeahead-container > ul > li > a:visited{
    font-family: "tw-cen-mt";
    background-image: none!important;
    background-color: #f16c26!important;
    color: #FFF!important;
}
.landing-page-search-box-header-text{
    font-family: "tw-cen-mt";
    color: #2572b7;
    line-height: 1em;
    font-size: 48px;
}
.landing-page-search-box-small-text{
    font-family: "tw-cen-mt";
    color: #f16c26;
    line-height: 1em;
    font-size: 28px;
    font-weight: normal;
}
/* ---------------------------- Table -------------------------------- */
table {
    border: 1px solid #ccc;
    border-collapse: collapse;
    margin: 0;
    padding: 0;
    width: 100%;
    table-layout: fixed;
    color: #484848;
}
table caption {
    font-size: 1.5em;
    margin: .5em 0 .75em;
}
table tr {
    background: #fff;
    border: 1px solid #ccc;
    padding: .35em;
}
table th,
table td {
    padding: .625em;
    text-align: center;
}
table th {
    font-size: .85em;
    letter-spacing: .1em;
    text-transform: uppercase;
    color: #216db1;
}
table tr:hover{
    color: #484848;
}
/* ... */

